fixed margin spacing on review feed

--- a/client/style.css
+++ b/client/style.css
@@ -189,6 +189,7 @@ a:focus {
   color: #525252;
   padding: 5px;
   margin: 5px;
+  margin-top: 20px;
   font-size: 28px;
   text-shadow: 1px 1px #a0252552;
   display: inline-block;
@@ -198,10 +199,11 @@ a:focus {
   width: 100px;
   position: fixed;
   float: right;
-  margin: 10px;
+  margin: 5px;
+  margin-left: 8px;
+  margin-top: 25px;
   background-color: #a02525b7;
   color: #fdfcfc;
-  display: inline-block;
   
 }
 
